--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build and Sign APK with Cordova
+name: Build and Sign APK with Capacitor
 
 on:
   workflow_dispatch:
@@ -16,11 +16,6 @@ on:
         description: 'Nombre del paquete'
         required: false
         default: 'com.example.miaplicacion'
-        type: string
-      android_target:
-        description: 'Versión del SDK objetivo de Android'
-        required: false
-        default: '33'
         type: string
 
 env:
@@ -50,121 +45,34 @@ jobs:
       - name: Configurar el SDK de Android
         uses: android-actions/setup-android@v3
         with:
-          cmdline-tools-version: '10406996' # Versión 11.0 de las herramientas de línea de comandos
-          accept-android-sdk-licenses: true
-          log-accepted-android-sdk-licenses: false
+          api-level: ${{ env.ANDROID_SDK_VERSION }}
+          accept-licenses: true
 
-      - name: Instalar paquetes adicionales del SDK de Android
+      - name: Instalar herramientas de compilación de Android
         run: |
-          echo "Instalando la plataforma del SDK de Android (android-${{ env.ANDROID_SDK_VERSION }})..."
-          yes | sdkmanager "platforms;android-${{ env.ANDROID_SDK_VERSION }}" "build-tools;${{ env.ANDROID_SDK_VERSION }}.0.0"
-          sdkmanager --list_installed
+          echo "Instalando herramientas de compilación de Android..."
+          yes | ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager "platforms;android-${{ env.ANDROID_SDK_VERSION }}" "build-tools;${{ env.ANDROID_SDK_VERSION }}.0.0" --licenses
 
-      - name: Instalar Gradle
+      - name: Instalar Capacitor y dependencias
         run: |
-          wget https://services.gradle.org/distributions/gradle-${{ env.GRADLE_VERSION }}-bin.zip
-          unzip gradle-${{ env.GRADLE_VERSION }}-bin.zip
-          export PATH=$PATH:$PWD/gradle-${{ env.GRADLE_VERSION }}/bin
-          gradle --version
-
-      - name: Instalar Cordova y dependencias globales
-        run: |
-          npm install -g cordova@latest native-run@latest cordova-res@latest
-          cordova --version
-
-      - name: Preparar proyecto Cordova
-        run: |
-          # Crear el proyecto Cordova
-          cordova create "${{ github.event.inputs.app_name }}" \
-            "${{ github.event.inputs.package_name }}" \
-            "${{ github.event.inputs.app_name }}"
-          
-          # Cambiar al directorio del proyecto
-          cd "${{ github.event.inputs.app_name }}"
-          
-          # Agregar plataforma Android con verbose
-          echo "Agregando plataforma Android..."
-          cordova platform add android@latest --verbose
-          
-          # Verificar la estructura del directorio
-          echo "Contenido del directorio platforms/android:"
-          ls -la platforms/android/
-
-      - name: Configurar Gradle
-        run: |
-          cd "${{ github.event.inputs.app_name }}"
-          
-          # Crear directorio gradle si no existe
-          mkdir -p platforms/android/gradle/wrapper
-          
-          # Crear gradle-wrapper.properties si no existe
-          if [ ! -f platforms/android/gradle/wrapper/gradle-wrapper.properties ]; then
-            echo "Creando gradle-wrapper.properties..."
-            echo "distributionUrl=https\://services.gradle.org/distributions/gradle-${{ env.GRADLE_VERSION }}-bin.zip" > platforms/android/gradle/wrapper/gradle-wrapper.properties
-          fi
-          
-          # Crear build.gradle si no existe
-          if [ ! -f platforms/android/build.gradle ]; then
-            echo "Creando build.gradle..."
-            cat <<EOL > platforms/android/build.gradle
-plugins {
-    id 'com.android.application'
-}
-
-android {
-    compileSdkVersion ${{ env.ANDROID_SDK_VERSION }}
-    defaultConfig {
-        applicationId "${{ github.event.inputs.package_name }}"
-        minSdkVersion 16
-        targetSdkVersion ${{ env.ANDROID_SDK_VERSION }}
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-}
-EOL
-          fi
-          
-          # Generar gradlew si no existe
-          if [ ! -f platforms/android/gradlew ]; then
-            echo "Generando gradlew..."
-            cd platforms/android
-            gradle wrapper
-            cd ../..
-          fi
-          
-          # Dar permisos de ejecución a gradlew
-          chmod +x platforms/android/gradlew
+          echo "Instalando Capacitor..."
+          npm install -g @capacitor/cli
+          npx cap init "${{ github.event.inputs.app_name }}" "${{ github.event.inputs.package_name }}"
+          echo "${{ github.event.inputs.html }}" > www/index.html
+          npm install
+          npx cap add android
 
       - name: Construir APK
         run: |
-          cd "${{ github.event.inputs.app_name }}"
-          # Mostrar versión de gradle
-          ./platforms/android/gradlew --version
-          
-          # Limpiar y construir
-          ./platforms/android/gradlew clean --stacktrace
-          cordova build android --release --verbose -- --stacktrace
+          echo "Construyendo APK..."
+          cd android
+          ./gradlew clean assembleRelease --stacktrace
         env:
           JAVA_OPTS: '-Xmx4g'
 
       - name: Configurar keystore
         run: |
-          cd "${{ github.event.inputs.app_name }}"
-          if [ -z "${{ secrets.KEYSTORE }}" ]; then
-            echo "Error: El secreto KEYSTORE no está configurado"
-            exit 1
-          fi
+          echo "Configurando keystore..."
           echo "${{ secrets.KEYSTORE }}" | base64 -d > my-release-key.jks
           if [ ! -f my-release-key.jks ]; then
             echo "Error: No se pudo crear el archivo keystore"
@@ -173,9 +81,14 @@ EOL
 
       - name: Firmar y alinear APK
         run: |
-          cd "${{ github.event.inputs.app_name }}"
-          APK_PATH=$(find platforms/android/app/build/outputs/apk/release -name "*.apk" -type f | head -n 1)
-          
-          if [ -z "$
-::contentReference[oaicite:0]{index=0}
- 
+          echo "Firmando APK..."
+          cd android/app/build/outputs/apk/release
+          jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore my-release-key.jks -storepass "${{ secrets.KEYSTORE_PASSWORD }}" -keypass "${{ secrets.KEY_PASSWORD }}" app-release-unsigned.apk "${{ secrets.KEY_ALIAS }}"
+          ${ANDROID_HOME}/build-tools/${{ env.ANDROID_SDK_VERSION }}.0.0/zipalign -v 4 app-release-unsigned.apk app-release-signed.apk
+
+      - name: Subir APK firmada
+        uses: actions/upload-artifact@v4
+        with:
+          name: signed-apk
+          path: android/app/build/outputs/apk/release/app-release-signed.apk
+          retention-days: 7
